<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/privacy_agreement"
        android:textColor="@color/black_293040"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        android:padding="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/iv_back" />

    <ScrollView
        android:id="@+id/cv_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/cl_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/hulk_privacy_agreement"
                android:textColor="@color/black_293040"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/gray_717787"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_content_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/refuse"
            android:textSize="16sp"
            android:background="@color/bg_gradual_A9C2F9"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_confirm"
            android:id="@+id/tv_refuse" />
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue_477BEF"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/oneself_confirm"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/tv_refuse"
            app:layout_constraintBottom_toBottomOf="@id/tv_refuse"
            app:layout_constraintStart_toEndOf="@id/tv_refuse"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>