<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradual_blue_bg"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_main_logo"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@color/blue_477BEF"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_phone_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/iv_center_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_mobile_number"
            android:textSize="20sp"
            android:textColor="@color/black_293040"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@id/iv_center_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_phone_title"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black_293040"
            android:textColorHint="@color/gray_A1A6B3"
            android:background="@null"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_title"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="12dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/input_phone_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            android:textSize="14sp"
            android:id="@+id/et_phone" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_DFE1E6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_477bef_r4"
        android:text="@string/start_experience"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="15dp"
        app:layout_goneMarginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/cl_top"
        android:layout_marginTop="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>