<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_title_app_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/appId"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_content_app_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_title_app_id" />

        <View
            android:id="@+id/v_app_id"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/tv_content_app_id" />

        <TextView
            android:id="@+id/tv_title_app_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/appSecret"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_app_id" />

        <TextView
            android:id="@+id/tv_content_app_secret"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_title_app_secret" />

        <View
            android:id="@+id/v_app_secret"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/tv_content_app_secret" />

        <TextView
            android:id="@+id/tv_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/uid"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_app_secret" />

        <EditText
            android:id="@+id/et_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_uid" />

        <View
            android:id="@+id/v_uid"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/et_uid" />

        <TextView
            android:id="@+id/tv_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/alias"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_uid" />

        <EditText
            android:id="@+id/et_alias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_alias" />

        <View
            android:id="@+id/v_alias"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/et_alias" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_alias" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_phone" />

        <View
            android:id="@+id/v_phone"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_phone" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_choice"
            android:textSize="16sp"
            android:textColor="@color/gray_717787"
            android:gravity="end"
            android:paddingHorizontal="16dp"
            android:drawablePadding="7dp"
            android:paddingVertical="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_location"
            app:layout_constraintBottom_toBottomOf="@id/tv_location"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <View
            android:id="@+id/v_location"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

<!--        <TextView-->
<!--            android:id="@+id/tv_manufacturer"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:text="@string/designated_manufacturer"-->
<!--            android:textColor="@color/black_293040"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/v_location" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_designate_manufacturer"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/please_choice"-->
<!--            android:text="@string/no_designate"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/gray_717787"-->
<!--            android:gravity="end"-->
<!--            android:paddingHorizontal="16dp"-->
<!--            android:drawablePadding="7dp"-->
<!--            android:paddingVertical="10dp"-->
<!--            app:layout_constraintStart_toEndOf="@id/tv_manufacturer"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@id/tv_manufacturer"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/tv_manufacturer"-->
<!--            app:drawableEndCompat="@drawable/ic_arrow_right" />-->

<!--        <View-->
<!--            android:id="@+id/v_manufacturer"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0.5dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@color/line_color"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_manufacturer" />-->

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_location" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_email" />

        <View
            android:id="@+id/v_email"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/wechat"
            android:textColor="@color/black_293040"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_email" />

        <EditText
            android:id="@+id/et_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:gravity="end"
            android:textColor="@color/gray_717787"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_title_app_secret"
            app:layout_constraintTop_toTopOf="@id/tv_wechat" />

        <View
            android:id="@+id/v_wechat"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/line_color"
            app:layout_constraintTop_toBottomOf="@id/et_wechat" />
</androidx.constraintlayout.widget.ConstraintLayout>