<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradual_blue_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_main_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_environment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="测试环境"
            android:textSize="12sp"
            android:textColor="@color/blue_385598"
            android:paddingHorizontal="5dp"
            android:paddingVertical="1dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            android:layout_marginStart="7dp"
            android:background="@drawable/shape_bg_blue5598" />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/shape_icon_bg"
            android:padding="6dp"
            android:src="@drawable/ic_setting"
            app:layout_constraintEnd_toStartOf="@id/iv_log"
            app:layout_constraintTop_toTopOf="@id/iv_log" />

        <ImageView
            android:id="@+id/iv_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:background="@drawable/shape_icon_bg"
            android:padding="6dp"
            android:src="@drawable/ic_log_info"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_logo" />

        <ImageView
            android:id="@+id/iv_big_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="49dp"
            android:src="@drawable/bg_big_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <ImageView
            android:id="@+id/iv_round_bg"
            android:layout_width="173dp"
            android:layout_height="173dp"
            android:background="@drawable/shape_blue_round_bg"
            app:layout_constraintBottom_toBottomOf="@id/iv_big_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_big_bg"
            app:layout_constraintStart_toStartOf="@id/iv_big_bg"
            app:layout_constraintTop_toTopOf="@id/iv_big_bg" />

        <ImageView
            android:id="@+id/iv_rotate"
            android:layout_width="173dp"
            android:layout_height="173dp"
            android:src="@drawable/ic_rotate_round"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_big_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_big_bg"
            app:layout_constraintStart_toStartOf="@id/iv_big_bg"
            app:layout_constraintTop_toTopOf="@id/iv_big_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_small_round"
            app:layout_constraintBottom_toBottomOf="@id/iv_big_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_big_bg"
            app:layout_constraintStart_toStartOf="@id/iv_big_bg"
            app:layout_constraintTop_toTopOf="@id/iv_big_bg" />

        <ImageView
            android:id="@+id/iv_switch"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/shape_switch_bg"
            android:scaleType="center"
            android:src="@drawable/ic_switch"
            app:layout_constraintBottom_toBottomOf="@id/iv_big_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_big_bg"
            app:layout_constraintStart_toStartOf="@id/iv_big_bg"
            app:layout_constraintTop_toTopOf="@id/iv_big_bg" />

        <TextView
            android:id="@+id/tv_running"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/shape_running_bg"
            android:gravity="center"
            android:text="@string/running"
            android:textColor="@color/blue_477BEF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_big_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_big_bg"
            app:layout_constraintStart_toStartOf="@id/iv_big_bg"
            app:layout_constraintTop_toTopOf="@id/iv_big_bg" />

        <LinearLayout
            android:id="@+id/ll_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_big_bg"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="UID:fdjsaodf"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black_293040"
                android:textStyle="bold"
                android:id="@+id/tv_uid"/>
            <ImageView
                android:id="@+id/iv_copy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:src="@drawable/ic_copy"
                android:scaleType="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/ll_uid"
            android:text="@string/uid_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_msg_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/msg_history"
        android:textColor="@color/black_293040"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_top" />

    <TextView
        android:id="@+id/tv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="14sp"
        android:textColor="@color/blue_477BEF"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_msg_history"
        app:layout_constraintBottom_toBottomOf="@id/tv_msg_history"
        android:layout_marginEnd="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/adapter_msg_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_msg_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_msg_history">

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_msg_hint"
            android:textColor="@color/gray_A1A6B3"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_empty" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>